--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -146,7 +146,7 @@ changes).
 
 ## Notes
 
-Another thing which we wont cover in this workshop, but you should look into
+Another thing which we won't cover in this workshop, but you should look into
 later, is using the `webpackChunkName` magic comment which will allow webpack to
 place common modules in the same chunk. This is good for components which you
 want loaded together in the same chunk (to reduce multiple requests for multiple
