--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -162,15 +162,15 @@ const elementPositionStateFamily = atomFamily({
   default: ({elementId}) => initialElements[elementId],
 })
 
-function ElementListItem({elementID}) {
+function ElementListItem({elementId}) {
   const [position, setPosition] = useRecoilState(
-    elementPositionStateFamily({elementID}),
+    elementPositionStateFamily({elementId}),
   )
   const handleClick = () =>
     setPosition(previousPosition => previousPosition + 10)
   return (
     <div>
-      Element: {elementID}
+      Element: {elementId}
       Position: {position}
       <button onClick={handleClick}>Change Position</button>
     </div>
