Fix typo at 01.md
I believe it shouldn't say textarea since there isn't any.

--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -108,7 +108,7 @@ with the typical user experience.
 
 So it's great that the users can get the app loaded faster, but it's annoying
 when 99% of the time the reason the users are using the app is so they can
-interact with our textarea. We don't want to have to make them wait first to
+interact with our globe. We don't want to have to make them wait first to
 load the app and then again to load the globe. Wouldn't it be cool if we could
 have globe start loading as soon as the user hovers over the checkbox? So if
 they `mouseOver` or `focus` the `<label>` for the checkbox, we should kick off a
