fix: correct path to exercise 2 extra credit final file

--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -74,7 +74,7 @@ changes.
 
 ### 1. 💯 React Production Mode
 
-[Production deploy](https://react-performance.netlify.app/isolated/final/02.extra-1.js)
+[Production deploy](https://react-performance.netlify.app/isolated/final/02.js)
 
 When doing this kind of profile measuring (to determine how slow something
 really is), it's very important that you make sure that the code you're
