--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -119,7 +119,7 @@ handle the fact that getItems is asynchronous. (💰 You don't need to make many
 changes, and _all_ of your changes will be in your exercise file).
 
 Because working with web workers is asynchronous, you'll probably want to use
-the `useAsync` utility found in `src/utils.js` (💰 take a peak. It has an
+the `useAsync` utility found in `src/utils.js` (💰 take a peek. It has an
 example for how to use it).
 
 Note also: For this one, to really get a sense of the performance improvements,
