--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -1,5 +1,9 @@
 # React.memo for reducing unnecessary re-renders
 
+## 📝 Your Notes
+
+Elaborate on your learnings here in `src/exercise/03.md`
+
 ## Background
 
 Here's the lifecycle of a React app:
@@ -187,11 +191,7 @@ So for this extra credit, try to accept an `isSelected` and `isHighlighted` prop
 to `ListItem` so you don't have to pass the frequently changing values for
 `selectedItem` and `highlightedIndex`.
 
-## 🦉 Elaboration and Feedback
+## 🦉 Feedback
 
-<div>
-<span>After the instruction, if you want to remember what you've just learned, then </span>
-<a rel="noopener noreferrer" target="_blank" href="https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=03%3A%20React.memo%20for%20reducing%20unnecessary%20re-renders&em=">
-  fill out the elaboration and feedback form.
-</a>
-</div>
+Fill out
+[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=03%3A%20React.memo%20for%20reducing%20unnecessary%20re-renders&em=).
