--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -1,5 +1,9 @@
 # Window large lists with react-virtual
 
+## 📝 Your Notes
+
+Elaborate on your learnings here in `src/exercise/04.md`
+
 > NOTE: We're going to be using a library called `react-virtual`. Some of you
 > may have used this before and others may not have used it or anything else
 > like it. I normally like to build up to abstractions like this one by building
@@ -98,8 +102,8 @@ function MyListOfData({items}) {
 In summary, rather than iterating over all the items in your list, you simply
 tell `useVirtual` how many rows are in your list, give it a callback that it can
 use to determine what size they each should be, and then it will give you back
-`virtualItems` and a `totalSize` which you can then use to only render the
-items the user should be able to see within the window.
+`virtualItems` and a `totalSize` which you can then use to only render the items
+the user should be able to see within the window.
 
 [react-virtual](https://github.com/tannerlinsley/react-virtual) has some really
 awesome capabilities for all sorts of lists (including variable sizes and
@@ -130,11 +134,7 @@ documenting what he's done so you can read about the changes he made if you
 want. 🐨 Kody the Koala will be there to help you know what changes you need to
 make. Good luck!
 
-## 🦉 Elaboration and Feedback
+## 🦉 Feedback
 
-<div>
-<span>After the instruction, if you want to remember what you've just learned, then </span>
-<a rel="noopener noreferrer" target="_blank" href="https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=04%3A%20Window%20large%20lists%20with%20react-virtual&em=">
-  fill out the elaboration and feedback form.
-</a>
-</div>
+Fill out
+[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=04%3A%20Window%20large%20lists%20with%20react-virtual&em=).
