--- a/src/exercise/07.md
+++ b/src/exercise/07.md
@@ -1,5 +1,9 @@
 # Production performance monitoring
 
+## 📝 Your Notes
+
+Elaborate on your learnings here in `src/exercise/07.md`
+
 ## Background
 
 We should always ship fast experiences to our users, but sometimes something
@@ -119,11 +123,7 @@ In this extra credit, add tracing for the click of the counter.
 📜 This API is currently experimental and the best docs for it are available in
 [this gist](https://gist.github.com/bvaughn/8de925562903afd2e7a12554adcdda16).
 
-## 🦉 Elaboration and Feedback
+## 🦉 Feedback
 
-<div>
-<span>After the instruction, if you want to remember what you've just learned, then </span>
-<a rel="noopener noreferrer" target="_blank" href="https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=07%3A%20Production%20performance%20monitoring&em=">
-  fill out the elaboration and feedback form.
-</a>
-</div>
+Fill out
+[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=07%3A%20Production%20performance%20monitoring&em=).
