--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -99,9 +99,9 @@ function MyListOfData({items}) {
 }
 ```
 
-In summary, rather than iterating over all the items in your list, you simply
-tell `useVirtual` how many rows are in your list, give it a callback that it can
-use to determine what size they each should be, and then it will give you back
+In summary, rather than iterating over all the items in your list, you can simply
+tell `useVirtual` how many rows are in your list, by giving it a callback that it can
+use to determine what size they each should be, and then `useVirtual` will give you back
 `virtualItems` and a `totalSize` which you can then use to only render the items
 the user should be able to see within the window.
 
