--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -11,7 +11,7 @@ app. Say for example that we're building a complex dashboard application that
 includes the venerable d3 library for graphing data. Your users start
 complaining because it takes too long to load the login screen.
 
-So, assuming that performance problems can be resolved by less code, how can we
+So, considering that performance problems can be resolved by less code, how can we
 solve this one? Well, do we really _need_ to have that code for the chart when
 the user loads the login screen? Nope! We could load that on-demand.
 
