--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -4,6 +4,12 @@
 
 Elaborate on your learnings here in `src/exercise/01.md`
 
+webpackPrefetch should be utilized when an action is required to load new chunk
+(ex: navigating to new page, clicking button to load heavy content)
+
+webpackPreload should be utilized when a module is required for the same page
+but is not required for initial render.
+
 ## Background
 
 Code splitting acts on the principle that loading less code will speed up your
@@ -11,9 +17,9 @@ app. Say for example that we're building a complex dashboard application that
 includes the venerable d3 library for graphing data. Your users start
 complaining because it takes too long to load the login screen.
 
-So, considering that performance problems can be resolved by less code, how can we
-solve this one? Well, do we really _need_ to have that code for the chart when
-the user loads the login screen? Nope! We could load that on-demand.
+So, considering that performance problems can be resolved by less code, how can
+we solve this one? Well, do we really _need_ to have that code for the chart
+when the user loads the login screen? Nope! We could load that on-demand.
 
 Luckily for us, there's a built-in way to do this with JavaScript standards.
 It's called a dynamic import and the syntax looks like this:
