--- a/exercises/01.composition/01.solution.reuse/README.mdx
+++ b/exercises/01.composition/01.solution.reuse/README.mdx
@@ -1,1 +1,4 @@
 # Reusing Elements
+
+👨‍💼 Great! Now we're not unnecessarily rendering the `Footer` component. But
+let's complicate things a little bit more...
