--- a/exercises/01.composition/02.solution.props/README.mdx
+++ b/exercises/01.composition/02.solution.props/README.mdx
@@ -1,1 +1,6 @@
 # Element Props
+
+👨‍💼 Great! So we can still make dynamic elements that are positioned where we
+want them to be without allowing them to be rerendered with every state change
+by passing them as props! This is the composition pattern from the Advanced
+React Patterns workshop at work!
