--- a/exercises/01.composition/FINISHED.mdx
+++ b/exercises/01.composition/FINISHED.mdx
@@ -1,1 +1,10 @@
-# Context Optimization
+# Element Optimization
+
+👨‍💼 Great work! You've really explored React's element optimization a lot in this
+exercise and hopefully it informs how you structure your components going
+forward.
+
+🦉 As a general reminder, you want to focus more of your efforts on making it
+easier for humans to understand your code than on making it faster for the
+computer to run unless you have a specific performance problem that you need to
+address!
