--- a/exercises/README.mdx
+++ b/exercises/README.mdx
@@ -38,4 +38,11 @@ slower, so developing a good understanding of how things work is important.
 	sure that the tradeoff is worth it. Don't optimize prematurely.
 </callout-danger>
 
+<callout-warning>Beware! Contrived examples ahead!</callout-warning>
+
+Simple examples in React are not slow. React is pretty dang fast. Complex
+examples are not instructive because it takes too much time and effort
+understanding the example. So as a result, we'll be using contrived examples for
+you to learn production-grade performance optimizations.
+
 With that, let's get started!
