--- a/exercises/01.composition/03.solution.context/README.mdx
+++ b/exercises/01.composition/03.solution.context/README.mdx
@@ -1,1 +1,4 @@
 # Context
+
+👨‍💼 Interesting that we can manage to really take this optimization with React
+elements so far huh? Well, let's try another one...
