--- a/exercises/01.composition/04.solution.use-memo/README.mdx
+++ b/exercises/01.composition/04.solution.use-memo/README.mdx
@@ -1,1 +1,6 @@
 # Memoize Elements
+
+👨‍💼 This is a bit of an unconventional approach to optimizing things, but it's
+cool to understand how all this works and see how far we can take this
+optimization that's built-into React! Let's take this a bit further with
+something a little more conventional.
