--- a/exercises/02.context/02.solution.provider-component/README.mdx
+++ b/exercises/02.context/02.solution.provider-component/README.mdx
@@ -1,1 +1,9 @@
 # Provider Component
+
+👨‍💼 Great work! You've eliminated more unnecessary rerenders!
+
+🦉 This is a really common pattern in the React community. It's kind of natural.
+It just means that people are benefiting from the optimizations that React
+has without thinking about it! However, this next one is not very common (and
+as is the case with most of these optimizations not normally necessary). But
+it's pretty handy in certain scenarios! Let's take a look.
