--- a/exercises/02.context/03.solution.split-context/README.mdx
+++ b/exercises/02.context/03.solution.split-context/README.mdx
@@ -1,1 +1,4 @@
 # Split Context
+
+👨‍💼 You've done good work! When you've got a lot of components that only consume
+the setters, this can be a good way to optimize those components.
