--- a/exercises/02.context/FINISHED.mdx
+++ b/exercises/02.context/FINISHED.mdx
@@ -1,1 +1,4 @@
 # Optimize Context
+
+👨‍💼 Great work! You now have some great context optimizations in your back
+pocket to use whenever you run into performance problems (and not before!!).
